# orbc

./: .clang-format  .clang-tidy  .clangd  .gitignore  README.md  compile.ps1  compile.sh  meson.build  meson.options  run.ps1  run.sh
.github/workflows/: meson-ubuntu.yml
include/orb/: concepts.hpp  ctx.hpp  type_traits.hpp
include/orb/cli/: cli.hpp
include/orb/fileio/: error.hpp  file_loading.hpp
include/orb/fileparsing/: error.hpp  file_loading.hpp
include/orb/log/: _log.hpp  assert.hpp  color.hpp  log.hpp  status.hpp
include/orb/parser/: ast.hpp  cursor.hpp  lexer.hpp  parser.hpp  types.hpp
pch/: pch.hpp
src/: ast.cpp  ast.hpp  lexer.cpp  lexer.hpp  main.cpp  meson.build  parser.cpp  parser.hpp  testing.hpp  tokens.hpp  types.hpp
src/cli/: cli.cpp  cli.hpp  meson.build
src/ctx/: ctx.hpp  meson.build
src/fileio/: file_loading.cpp
src/fileparsing/: file_loading.cpp  meson.build
src/log/: _log.hpp  assert.hpp  color.hpp  log.cpp  log.hpp  meson.build  status.cpp  status.hpp
src/parser/: ast.cpp  ast.hpp  lexer.cpp  meson.build  parser.cpp  types.hpp
tests/: meson.build
tests/data_structures/: cursor.cpp
tests/lexer/: meson.build
tests/loading_files/: emojitest.txt  meson.build  multilingualtest.txt  normaltest.txt  test.cpp
